[gd_scene load_steps=8 format=3 uid="uid://c38kt6bogw2mq"]

[ext_resource type="Script" uid="uid://wmjg8xw6jhs4" path="res://Scripts/Partida/Jogador/jogador.gd" id="1_hjt1h"]
[ext_resource type="Texture2D" uid="uid://bnsy7do16v8k5" path="res://Assets/Ferramentas/circle.png" id="2_lwruk"]
[ext_resource type="SpriteFrames" uid="uid://jrc3bqgmf5t" path="res://PreSets/Jogador/JogadorAnim.tres" id="3_801pi"]
[ext_resource type="PackedScene" uid="uid://cb5x2dl7n7ywu" path="res://Cenas/Partida/Jogadores/indicador_direcao.tscn" id="4_t8i7p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hjt1h"]
radius = 76.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qpddn"]
radius = 17.0
height = 58.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_una1k"]
radius = 12.0
height = 46.0

[node name="Jogador" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_hjt1h")
slowdown_lodo = 0.65
max_water_time = 0.5

[node name="SpriteSombra" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 0, 0.670588)
position = Vector2(-1, 9)
scale = Vector2(0.6, 0.3)
texture = ExtResource("2_lwruk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -26)
scale = Vector2(3, 3)
sprite_frames = ExtResource("3_801pi")
animation = &"redIdle"
frame_progress = 0.416853

[node name="AreaInteracao" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaInteracao"]
shape = SubResource("CircleShape2D_hjt1h")
debug_color = Color(0.466667, 0.764706, 0.909804, 0.0509804)

[node name="CollisionCorpo" type="CollisionShape2D" parent="."]
z_index = 100
position = Vector2(-2, -9)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_qpddn")
debug_color = Color(0.717647, 0.411765, 0.654902, 0.247059)

[node name="CollisionGarra" type="CollisionShape2D" parent="."]
z_index = 100
position = Vector2(-2, 13)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_una1k")
debug_color = Color(0.670588, 0.419608, 0.74902, 0.137255)

[node name="IndicadorDirecao" parent="." instance=ExtResource("4_t8i7p")]
z_index = -1
position = Vector2(-2, 0)

[connection signal="body_entered" from="AreaInteracao" to="." method="_on_area_interacao_body_entered"]
[connection signal="body_exited" from="AreaInteracao" to="." method="_on_area_interacao_body_exited"]

[editable path="IndicadorDirecao"]
